feat: Add endpoint to upload documents to a specified folder
